// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`root > when add is given > prints the usage when --help is passed 1`] = `
"Add models, fields, actions, routes and environments to your app

Usage
  ggt add <resource> [args...] [options]

Commands
  model                 Add a new model
  action                Add a new action
  route                 Add a new route
  field                 Add a field to a model
  environment           Clone an environment

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --allow-different-app         Allow syncing a different app than the one in sync.json
      --allow-unknown-directory     Allow syncing an unrecognized directory

Examples
  $ ggt add model post title:string body:string
  $ ggt add field post/published:boolean
  $ ggt add action model/post/publish
  $ ggt add action action/audit
  $ ggt add route GET howdy
  $ ggt add environment staging --environment development

Resource syntax
  ggt add model <model_name> [field_name:field_type ...]

  ggt add action [CONTEXT]/<action_name>
  CONTEXT: Specifies the kind of action. Use "model" for model actions otherwise use "action".

  ggt add route <HTTP_METHOD> <route_path>

  ggt add field <model_path>/<field_name>:<field_type>
"
`;

exports[`root > when add is given > prints the usage when -h is passed 1`] = `
"Add models, fields, actions, routes and environments to your app

Usage
  ggt add <resource> [args...] [options]

Commands
  model                 Add a new model
  action                Add a new action
  route                 Add a new route
  field                 Add a field to a model
  environment           Clone an environment

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --allow-different-app         Allow syncing a different app than the one in sync.json
      --allow-unknown-directory     Allow syncing an unrecognized directory

Examples
  $ ggt add model post title:string body:string
  $ ggt add field post/published:boolean
  $ ggt add action model/post/publish
  $ ggt add action action/audit
  $ ggt add route GET howdy
  $ ggt add environment staging --environment development

Run "ggt add --help" for detailed help.
"
`;

exports[`root > when agent-plugin is given > prints the usage when --help is passed 1`] = `
"Install Gadget agent plugins

Usage
  ggt agent-plugin [options]

Commands
  install               Install Gadget agent plugins into the current project

Flags
      --force             Overwrite/reinstall even if already present

Examples
  $ ggt agent-plugin install
  $ ggt agent-plugin install --force

Run "ggt agent-plugin --help" for detailed help.
"
`;

exports[`root > when agent-plugin is given > prints the usage when -h is passed 1`] = `
"Install Gadget agent plugins

Usage
  ggt agent-plugin [options]

Commands
  install               Install Gadget agent plugins into the current project

Flags
      --force             Overwrite/reinstall even if already present

Examples
  $ ggt agent-plugin install
  $ ggt agent-plugin install --force

Run "ggt agent-plugin --help" for detailed help.
"
`;

exports[`root > when completion is given > prints the usage when --help is passed 1`] = `
"Generate shell completion scripts

Usage
  ggt completion <shell> [options]

Commands
  bash                  Generate bash completion script
  zsh                   Generate zsh completion script
  fish                  Generate fish completion script

Examples
  $ ggt completion bash
  $ ggt completion zsh
  $ ggt completion fish

Installation
  Bash (add to ~/.bashrc):
    source <(ggt completion bash)

  Zsh (add to ~/.zshrc):
    source <(ggt completion zsh)

  Fish:
    ggt completion fish | source
    # Or to persist:
    ggt completion fish > ~/.config/fish/completions/ggt.fish
"
`;

exports[`root > when completion is given > prints the usage when -h is passed 1`] = `
"Generate shell completion scripts

Usage
  ggt completion <shell> [options]

Commands
  bash                  Generate bash completion script
  zsh                   Generate zsh completion script
  fish                  Generate fish completion script

Examples
  $ ggt completion bash
  $ ggt completion zsh
  $ ggt completion fish

Run "ggt completion --help" for detailed help.
"
`;

exports[`root > when configure is given > prints the usage when --help is passed 1`] = `
"Configure default execution options

Make changes to the configured defaults. This allows you to set an option on every ggt command by default without
needing to set a flag on every command.

Usage
  ggt configure [options]

Commands
  show                  Show current configuration
  change                Change configuration options
  clear                 Clear all configured defaults

Examples
  $ ggt configure show
  $ ggt configure change
  $ ggt configure clear
"
`;

exports[`root > when configure is given > prints the usage when -h is passed 1`] = `
"Configure default execution options

Usage
  ggt configure [options]

Commands
  show                  Show current configuration
  change                Change configuration options
  clear                 Clear all configured defaults

Examples
  $ ggt configure show
  $ ggt configure change
  $ ggt configure clear

Run "ggt configure --help" for detailed help.
"
`;

exports[`root > when debugger is given > prints the usage when --help is passed 1`] = `
"Connect to the debugger for your environment

Start a Chrome DevTools Protocol proxy server that connects to the Gadget debugger.
This allows you to debug your Gadget app using VS Code, Chrome DevTools, or any other
CDP-compatible debugger client.

Use --configure with one of: vscode, cursor to set up editor integration.

Usage
  ggt debugger [DIRECTORY] [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -ll, --log-level <value>          Set the log level
      --my-logs                     Show only my logs
  -p, --port <value>                Port for the debugger
      --configure <value>           Configure the debugger for an editor

Examples
  $ ggt debugger
  $ ggt debugger --port 9230
  $ ggt debugger --app myApp --env development
  $ ggt debugger --configure vscode
"
`;

exports[`root > when debugger is given > prints the usage when -h is passed 1`] = `
"Connect to the debugger for your environment

Usage
  ggt debugger [DIRECTORY] [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -ll, --log-level <value>          Set the log level
      --my-logs                     Show only my logs
  -p, --port <value>                Port for the debugger
      --configure <value>           Configure the debugger for an editor

Examples
  $ ggt debugger
  $ ggt debugger --port 9230
  $ ggt debugger --app myApp --env development
  $ ggt debugger --configure vscode

Run "ggt debugger --help" for detailed help.
"
`;

exports[`root > when deploy is given > prints the usage when --help is passed 1`] = `
"Deploy your environment to production

Deploys your app to production.

This command first performs a sync to ensure that your local and environment directories
match, changes are tracked since last sync. If any conflicts are detected, they must be
resolved before deployment.

Usage
  ggt deploy [options]

Flags
  -a, --application, --app <value>          Select the application
  -e, --environment, --from, --env <value>  Select the environment
      --allow-different-app                 Allow syncing a different app than the one in sync.json
      --allow-unknown-directory             Allow syncing an unrecognized directory
  -f, --force                               Discard conflicting changes
  --allow-issues, --allow-problems          Deploy even with problems
      --allow-charges                       Deploy even with new charges
      --allow-data-delete                   Deploy even with data loss

Examples
  $ ggt deploy -a myBlog --from staging
"
`;

exports[`root > when deploy is given > prints the usage when -h is passed 1`] = `
"Deploy your environment to production

Usage
  ggt deploy [options]

Flags
  -a, --application, --app <value>          Select the application
  -e, --environment, --from, --env <value>  Select the environment
      --allow-different-app                 Allow syncing a different app than the one in sync.json
      --allow-unknown-directory             Allow syncing an unrecognized directory
  -f, --force                               Discard conflicting changes
  --allow-issues, --allow-problems          Deploy even with problems
      --allow-charges                       Deploy even with new charges
      --allow-data-delete                   Deploy even with data loss

Examples
  $ ggt deploy -a myBlog --from staging

Run "ggt deploy --help" for detailed help.
"
`;

exports[`root > when dev is given > prints the usage when --help is passed 1`] = `
"Start developing your application

Clones your Gadget environment's files to your local machine and keeps it in sync, in order to
enable local development with your text editor and source code with Git.

If your app's local directory already exists, this command first performs a sync to ensure
that your local and environment directories match, changes are tracked since last sync. If any
conflicts are detected, they must be resolved before development starts.

Usage
  ggt dev [DIRECTORY] [options]

Flags
  -a, --application, --app <value>         Select the application
  -e, --environment, --env <value>         Select the environment
      --allow-different-app                Allow syncing a different app than the one in sync.json
      --allow-unknown-directory            Allow syncing an unrecognized directory
  -ll, --log-level <value>                 Set the log level
      --my-logs                            Show only my logs
      --prefer <value>                     Conflict resolution preference (local or environment)
      --file-push-delay <value>            Delay in ms before pushing file changes
      --file-watch-debounce <value>        Debounce in ms for file watch events
      --file-watch-poll-interval <value>   Interval in ms for polling file changes
      --file-watch-poll-timeout <value>    Timeout in ms for file watch polling
      --file-watch-rename-timeout <value>  Timeout in ms for detecting file renames
      --no-logs                            Disable log streaming during dev

Examples
  $ ggt dev ~/myGadgetApps/myBlog --app myBlogApp
  $ ggt dev --env main --prefer local
  $ ggt dev ~/gadget/example --app=example --env=development --prefer=local

Ignoring files
  ggt dev uses a .ignore file, similar to .gitignore, to exclude specific files and
  folders from syncing. These files are always ignored:

    • .DS_Store
    • .gadget
    • .git
    • node_modules
    • .shopify

Notes
    • "ggt dev" only works with development environments
    • "ggt dev" only supports "yarn" v1 for installing dependencies
    • Avoid deleting or moving all of your files while "ggt dev" is running
"
`;

exports[`root > when dev is given > prints the usage when -h is passed 1`] = `
"Start developing your application

Usage
  ggt dev [DIRECTORY] [options]

Flags
  -a, --application, --app <value>         Select the application
  -e, --environment, --env <value>         Select the environment
      --allow-different-app                Allow syncing a different app than the one in sync.json
      --allow-unknown-directory            Allow syncing an unrecognized directory
  -ll, --log-level <value>                 Set the log level
      --my-logs                            Show only my logs
      --prefer <value>                     Conflict resolution preference (local or environment)
      --file-push-delay <value>            Delay in ms before pushing file changes
      --file-watch-debounce <value>        Debounce in ms for file watch events
      --file-watch-poll-interval <value>   Interval in ms for polling file changes
      --file-watch-poll-timeout <value>    Timeout in ms for file watch polling
      --file-watch-rename-timeout <value>  Timeout in ms for detecting file renames
      --no-logs                            Disable log streaming during dev

Examples
  $ ggt dev ~/myGadgetApps/myBlog --app myBlogApp
  $ ggt dev --env main --prefer local
  $ ggt dev ~/gadget/example --app=example --env=development --prefer=local

Run "ggt dev --help" for detailed help.
"
`;

exports[`root > when env is given > prints the usage when --help is passed 1`] = `
"Manage environments for your Gadget application.

Usage
  ggt env <command> [options]

Commands
  list             List all environments
  create <name>    Create a new environment
  delete <name>    Delete an environment
  unpause <name>   Unpause a paused environment
  use <name>       Switch the active environment

Options
  -a, --app <app_name>   Selects the application

Run "ggt env <command> -h" for more information about a specific command.
"
`;

exports[`root > when env is given > prints the usage when -h is passed 1`] = `
"Manage environments for your Gadget application.

Usage
  ggt env <command> [options]

Commands
  list             List all environments
  create <name>    Create a new environment
  delete <name>    Delete an environment
  unpause <name>   Unpause a paused environment
  use <name>       Switch the active environment

Options
  -a, --app <app_name>   Selects the application

Run "ggt env <command> -h" for more information about a specific command.
"
`;

exports[`root > when eval is given > prints the usage when --help is passed 1`] = `
"Evaluate a JavaScript snippet against your app's API

The snippet receives an api variable (a pre-constructed Gadget API client
authenticated as the developer). Results are formatted like Node.js REPL output.
Writes are disallowed by default; use --allow-writes to enable them.

Usage
  ggt eval <snippet> [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -w, --allow-writes                Allow write operations in eval

Examples
  $ ggt eval 'api.user.findMany()'
  $ ggt eval --app my-app --env staging 'api.user.findFirst()'
  $ ggt eval -w 'api.user.delete("123")'
"
`;

exports[`root > when eval is given > prints the usage when -h is passed 1`] = `
"Evaluate a JavaScript snippet against your app's API

Usage
  ggt eval <snippet> [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -w, --allow-writes                Allow write operations in eval

Examples
  $ ggt eval 'api.user.findMany()'
  $ ggt eval --app my-app --env staging 'api.user.findFirst()'
  $ ggt eval -w 'api.user.delete("123")'

Run "ggt eval --help" for detailed help.
"
`;

exports[`root > when list is given > prints the usage when --help is passed 1`] = `
"List your available applications

Usage
  ggt list [options]

Examples
  $ ggt list

Run "ggt list --help" for detailed help.
"
`;

exports[`root > when list is given > prints the usage when -h is passed 1`] = `
"List your available applications

Usage
  ggt list [options]

Examples
  $ ggt list

Run "ggt list --help" for detailed help.
"
`;

exports[`root > when login is given > prints the usage when --help is passed 1`] = `
"Log in to your account

Usage
  ggt login [options]

Examples
  $ ggt login

Run "ggt login --help" for detailed help.
"
`;

exports[`root > when login is given > prints the usage when -h is passed 1`] = `
"Log in to your account

Usage
  ggt login [options]

Examples
  $ ggt login

Run "ggt login --help" for detailed help.
"
`;

exports[`root > when logout is given > prints the usage when --help is passed 1`] = `
"Log out of your account

Usage
  ggt logout [options]

Examples
  $ ggt logout

Run "ggt logout --help" for detailed help.
"
`;

exports[`root > when logout is given > prints the usage when -h is passed 1`] = `
"Log out of your account

Usage
  ggt logout [options]

Examples
  $ ggt logout

Run "ggt logout --help" for detailed help.
"
`;

exports[`root > when logs is given > prints the usage when --help is passed 1`] = `
"Stream your environment's logs

Usage
  ggt logs [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -ll, --log-level <value>          Set the log level
      --my-logs                     Show only my logs

Examples
  $ ggt logs --env development --my-logs
  $ ggt logs --env production --json

Run "ggt logs --help" for detailed help.
"
`;

exports[`root > when logs is given > prints the usage when -h is passed 1`] = `
"Stream your environment's logs

Usage
  ggt logs [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
  -ll, --log-level <value>          Set the log level
      --my-logs                     Show only my logs

Examples
  $ ggt logs --env development --my-logs
  $ ggt logs --env production --json

Run "ggt logs --help" for detailed help.
"
`;

exports[`root > when open is given > prints the usage when --help is passed 1`] = `
"Open a Gadget location in your browser

This command opens a specific Gadget page in your browser, allowing you to directly access
various parts of your application's interface such as logs, permissions, data views, or
schemas.

Usage
  ggt open [LOCATION] [model_name] [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --show-all                    Show all available locations

Examples
  $ ggt open
  $ ggt open logs
  $ ggt open permissions
  $ ggt open data post
  $ ggt open schema post
  $ ggt open data --show-all

Locations
  LOCATION specifies the part of Gadget to open. By default it opens the app's home page:

    logs          Opens logs
    permissions   Opens permissions
    data          Opens data editor for a specific model
    schema        Opens schema editor for a specific model
"
`;

exports[`root > when open is given > prints the usage when -h is passed 1`] = `
"Open a Gadget location in your browser

Usage
  ggt open [LOCATION] [model_name] [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --show-all                    Show all available locations

Examples
  $ ggt open
  $ ggt open logs
  $ ggt open permissions
  $ ggt open data post
  $ ggt open schema post
  $ ggt open data --show-all

Run "ggt open --help" for detailed help.
"
`;

exports[`root > when problems is given > prints the usage when --help is passed 1`] = `
"Show problems found in your application

Usage
  ggt problems [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment

Examples
  $ ggt problems

Run "ggt problems --help" for detailed help.
"
`;

exports[`root > when problems is given > prints the usage when -h is passed 1`] = `
"Show problems found in your application

Usage
  ggt problems [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment

Examples
  $ ggt problems

Run "ggt problems --help" for detailed help.
"
`;

exports[`root > when pull is given > prints the usage when --help is passed 1`] = `
"Pull your environment's files to your local computer

Pulls your environment files to your local directory.

This command first tracks changes in your local directory since the last sync. If changes are
detected, you will be prompted to discard them or abort the pull.

Usage
  ggt pull [options]

Flags
  -a, --application, --app <value>          Select the application
  -e, --environment, --from, --env <value>  Select the environment
      --allow-different-app                 Allow syncing a different app than the one in sync.json
      --allow-unknown-directory             Allow syncing an unrecognized directory
  -f, --force                               Discard conflicting changes

Examples
  $ ggt pull --env development --force
"
`;

exports[`root > when pull is given > prints the usage when -h is passed 1`] = `
"Pull your environment's files to your local computer

Usage
  ggt pull [options]

Flags
  -a, --application, --app <value>          Select the application
  -e, --environment, --from, --env <value>  Select the environment
      --allow-different-app                 Allow syncing a different app than the one in sync.json
      --allow-unknown-directory             Allow syncing an unrecognized directory
  -f, --force                               Discard conflicting changes

Examples
  $ ggt pull --env development --force

Run "ggt pull --help" for detailed help.
"
`;

exports[`root > when push is given > prints the usage when --help is passed 1`] = `
"Push your local files to your environment

Pushes your local files to your environment directory.

This command first tracks changes in your environment directory since the last sync.
If changes are detected, you will be prompted to discard them or abort the push.

Usage
  ggt push [options]

Flags
  -a, --application, --app <value>        Select the application
  -e, --environment, --to, --env <value>  Select the environment
      --allow-different-app               Allow syncing a different app than the one in sync.json
      --allow-unknown-directory           Allow syncing an unrecognized directory
  -f, --force                             Discard conflicting changes

Examples
  $ ggt push --env main --force
"
`;

exports[`root > when push is given > prints the usage when -h is passed 1`] = `
"Push your local files to your environment

Usage
  ggt push [options]

Flags
  -a, --application, --app <value>        Select the application
  -e, --environment, --to, --env <value>  Select the environment
      --allow-different-app               Allow syncing a different app than the one in sync.json
      --allow-unknown-directory           Allow syncing an unrecognized directory
  -f, --force                             Discard conflicting changes

Examples
  $ ggt push --env main --force

Run "ggt push --help" for detailed help.
"
`;

exports[`root > when status is given > prints the usage when --help is passed 1`] = `
"Show your local and environment's file changes

Usage
  ggt status [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --allow-different-app         Allow syncing a different app than the one in sync.json
      --allow-unknown-directory     Allow syncing an unrecognized directory

Examples
  $ ggt status

Run "ggt status --help" for detailed help.
"
`;

exports[`root > when status is given > prints the usage when -h is passed 1`] = `
"Show your local and environment's file changes

Usage
  ggt status [options]

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment
      --allow-different-app         Allow syncing a different app than the one in sync.json
      --allow-unknown-directory     Allow syncing an unrecognized directory

Examples
  $ ggt status

Run "ggt status --help" for detailed help.
"
`;

exports[`root > when var is given > prints the usage when --help is passed 1`] = `
"Manage environment variables

Usage
  ggt var <command> [options]

Commands
  list                  List all environment variables
  get                   Get the value of an environment variable
  set                   Set one or more environment variables
  delete                Delete one or more environment variables
  import                Import environment variables from another environment or file

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment

Examples
  $ ggt var list --app=my-app --env=development
  $ ggt var set API_KEY=abc123 --secret
  $ ggt var delete --all --force
  $ ggt var import --from=staging --all

Run "ggt var --help" for detailed help.
"
`;

exports[`root > when var is given > prints the usage when -h is passed 1`] = `
"Manage environment variables

Usage
  ggt var <command> [options]

Commands
  list                  List all environment variables
  get                   Get the value of an environment variable
  set                   Set one or more environment variables
  delete                Delete one or more environment variables
  import                Import environment variables from another environment or file

Flags
  -a, --application, --app <value>  Select the application
  -e, --environment, --env <value>  Select the environment

Examples
  $ ggt var list --app=my-app --env=development
  $ ggt var set API_KEY=abc123 --secret
  $ ggt var delete --all --force
  $ ggt var import --from=staging --all

Run "ggt var --help" for detailed help.
"
`;

exports[`root > when version is given > prints the usage when --help is passed 1`] = `
"Print this version of ggt

Usage
  ggt version [options]

Examples
  $ ggt version

Updating ggt
  When there is a new release of ggt, running ggt will show you a message letting you
  know that an update is available.
"
`;

exports[`root > when version is given > prints the usage when -h is passed 1`] = `
"Print this version of ggt

Usage
  ggt version [options]

Examples
  $ ggt version

Run "ggt version --help" for detailed help.
"
`;

exports[`root > when whoami is given > prints the usage when --help is passed 1`] = `
"Print the name and email of the logged-in user

Usage
  ggt whoami [options]

Examples
  $ ggt whoami

Run "ggt whoami --help" for detailed help.
"
`;

exports[`root > when whoami is given > prints the usage when -h is passed 1`] = `
"Print the name and email of the logged-in user

Usage
  ggt whoami [options]

Examples
  $ ggt whoami

Run "ggt whoami --help" for detailed help.
"
`;
